# manifold

./: .gitignore  CLAUDE.md  ENGINES.md  ENGINES_README.md  ENGINE_INVENTORY.md  README.md  ZSCORE_AUDIT_MANIFOLD.md  bench_pipeline.py  benchmark_primitives.py  benchmark_results.md  explorer_requirements.txt  fly.toml  orthon_explorer.py  pyproject.toml  requirements.txt  run_full_prism_test.py  test_results_cmapss_all.md
.claude/: settings.local.json
claudework/: forman_ricci.py  pr_manifold_geometry.md
claudework/dynamical/: dynamical_systems.py  pr_dynamical_systems.md
claudework/files-19/: dynamical_systems_orchestrator.py  granger.py  hurst.py  lyapunov.py  permutation_entropy.py  recurrence.py  takens.py
config/: domain.yaml  domains.yaml  engines.yaml  stride.yaml
config/domains/: cmapss.yaml  cwru_bearing.yaml  tep.yaml
docs/: schema_proposal.md
engines/: cli.py
engines/decompose/: README.md  __init__.py  run.py
engines/dynamics/: README.md  __init__.py  run.py
engines/entry_points/: run_pipeline.py  stage_01_signal_vector.py  stage_02_state_vector.py  stage_03_state_geometry.py  stage_04_cohorts.py  stage_08_ftle.py  stage_09_dynamics.py  stage_10_information_flow.py  stage_11_topology.py  stage_18_segment_comparison.py  stage_19_info_flow_delta.py  stage_20_sensor_eigendecomp.py  stage_21_velocity_field.py  stage_23_ridge_proximity.py  stage_25_cohort_vector.py  stage_26_system_geometry.py  stage_27_cohort_pairwise.py  stage_28_cohort_information_flow.py  stage_29_cohort_topology.py  stage_30_cohort_ftle.py  stage_32_cohort_fingerprint.py
engines/fingerprint/: README.md  __init__.py  run.py
engines/io/: __init__.py  read.py  write.py
engines/manifold/: geometry_dynamics.py  signal_geometry.py  signal_pairwise.py
engines/pairwise/: README.md  __init__.py  run.py
engines/pipeline/: __init__.py  cohort_pipeline.py  manifest.py  signal_pipeline.py
engines/utils/: __init__.py  validation.py  windowing.py
engines/vector/: README.md  __init__.py  run.py
examples/: cstr_kinetics_to_orthon.py
manifold/: __init__.py  __main__.py  run.py
manifold/core/: __init__.py  _compat.py  _pmtvs.py  _stats.py  base.py  breaks.py  geometry_dynamics.py  normalization.py  registry.py  rolling.py  signal_geometry.py  signal_pairwise.py  state_geometry.py  typology.py
manifold/io/: __init__.py  coordinate.py  manifest.py  reader.py  units.py  writer.py
manifold/primitives/: __init__.py  _config.py  config.py
manifold/stages/: __init__.py
manifold/validation/: __init__.py  input_validation.py  prerequisites.py
ml/ML_Ablation/: PR_ml_ablation.md  cmapss_benchmark.py  ml_ablation.py
orthon/: app.py
orthon/orthon-app/: README.md  app.py  requirements.txt
orthon/pipeline/: __init__.py  generate_from_observations.py  generate_manifold_data.py
orthon/viewer/: __init__.py  app.py  debug.html  geometry.html  geometry_perfect_manifold_backup.html  manifold.html  manifold_duckdb.html  manifold_full.html  manifold_simple.html  package-lock.json  package.json  quadview.html  test.html
prism/: README.md  __init__.py  __main__.py  api.py  capability.py  cli.py  domains.py  python_runner.py  ram_manager.py  runner.py  sanity.py  signal_vector_runner.py  sql_runner.py
prism/_legacy/: runner.py
prism/archetypes/: __init__.py  discovery_matrix.py  library.py  matching.py
prism/causal_mechanics/: __init__.py  models.py  orchestrator.py  state_computation.py  transitions.py
prism/cohorts/: __init__.py  models.py  user_cohorts.py
prism/config/: __init__.py  loader.py  metric_requirements.py  schema.py  thresholds.py
prism/db/: parquet_store.py
prism/disciplines/: registry.py
prism/dynamical_systems/: __init__.py  models.py  orchestrator.py  state_computation.py  transitions.py
prism/engines/: __init__.py  breaks.py  characterize.py  dynamics_runner.py  engine_manifest.yaml  engine_mapping.py  information_flow_runner.py  signal_geometry.py  signal_pairwise.py  state_geometry.py  state_vector.py  topology_runner.py  typology_engine.py
prism/entry_points/: __init__.py  api.py  compute.py  dynamics.py  fields.py  geometry.py  manifold_geometry.py  physics.py  pipeline.py  run.py  run_pipeline.py  signal_states.py  signal_typology.py  signal_vector.py  stage_00_breaks.py  stage_02_state_vector.py  stage_03_state_geometry.py  stage_04_cohorts.py  stage_09a_cohort_thermodynamics.py  stage_10_information_flow.py  stage_20_geometry_full.py  stage_21_velocity_field.py  state.py  vector.py
prism/layers/: __init__.py  behavioral_geometry.py  signal_typology.py  (+1 more)
proof/: hd_slope_highres.py
reports/: battery_45_48_derivations.md
streamlit/: app.py  auth.py
summary/: detection_report.json  healthy_baseline.json  orthon_analysis_notebook.py
tests/: test_breaks.py  test_trajectory_features.py
(+526 files in other folders)
