[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "Pure calculation engine for industrial diagnostics"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "numba>=0.58.0",
    "antropy>=0.1.6",
    "nolds>=0.5.2",
    "pyrqa>=8.0.0",
    "arch>=6.0.0",
    "PyWavelets>=1.4.0",
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
prism-serve = "prism.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*", "domains*"]
