[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold"
version = "1.0.0"
description = "Dynamical systems computation engines — eigendecomposition, FTLE, velocity fields, and urgency metrics"
readme = "README.md"
license = {text = "PolyForm-Noncommercial-1.0.0"}
authors = [
    {name = "Jason Rudder"}
]
keywords = ["dynamical-systems", "diagnostics", "eigendecomposition", "lyapunov", "ftle", "time-series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "polars>=0.20.0",
    "joblib>=1.0.0",
    "pyyaml>=6.0",
    "pyarrow>=8.0",
]

[project.scripts]
manifold = "manifold.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]

dynamics = [
    "nolds>=0.5.0",
]

ml = [
    "scikit-learn>=1.0.0",
]

topology = [
    "ripser>=0.6",
    "persim>=0.3",
]

hmm = [
    "hmmlearn>=0.3.0",
]

all = [
    "manifold[dynamics,ml,topology,hmm]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["manifold*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=manifold --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
