[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnfld"
version = "0.0.1"
description = "Signal geometry compute engine. Eigendecomposition, FTLE, thermodynamics, coherence. Observations in, parquets out."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jason Rudder"}
]
keywords = ["dynamical-systems", "diagnostics", "eigendecomposition", "lyapunov", "ftle", "time-series"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pmtvs>=0.0.1",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "polars>=0.20.0",
    "joblib>=1.0.0",
    "pyyaml>=6.0",
    "pyarrow>=8.0",
]

[project.scripts]
manifold = "manifold.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]

dynamics = [
    "nolds>=0.5.0",
]

ml = [
    "scikit-learn>=1.0.0",
]

topology = [
    "ripser>=0.6",
    "persim>=0.3",
]

hmm = [
    "hmmlearn>=0.3.0",
]

all = [
    "manifold[dynamics,ml,topology,hmm]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["manifold*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=manifold --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
